Hospital-DSL-f2d48c4c35fc96526d2fdb10bdd8c5a14254ac85/Hospital-DSL-f2d48c4c35fc96526d2fdb10bdd8c5a14254ac85/v1/grammar/HospitalViewsParser.js
// Generated from HospitalViews.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var HospitalViewsListener = require('./HospitalViewsListener').HospitalViewsListener;
var grammarFileName = "HospitalViews.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'import'", "';'", "'LoginGroups'", "'{'", "'}'", 
                     "'Group'", "'roles:'", "'selfRegister:'", "'registerFields:'", 
                     "','", "'Portal'", "'for:'", "'Page'", "'Route:'", 
                     "'Title:'", "'Table'", "'from:'", "'columns:'", "'Form'", 
                     "'submit:'", "'fields:'", "'onSuccess:'", "'Field'", 
                     "'Detail'", "'MetricGrid'", "'show:'", "'Kanban'", 
                     "'groupBy:'", "'update:'", "'card:'", "'Calendar'", 
                     "'dateField:'", "'labelField:'", "'View'", "'get:'", 
                     "'Edit'", "'actions:'", "'refresh'", "'toast'", "'navigate'", 
                     "'.'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "BOOLEAN_LITERAL", 
                      "ID", "STRING", "WS", "COMMENT" ];

var ruleNames =  [ "viewsFile", "importDecl", "loginGroupsDecl", "groupDecl", 
                   "groupItem", "idList", "portalDecl", "portalItem", "pageDecl", 
                   "pageItem", "containerDecl", "tableDecl", "tableItem", 
                   "formDecl", "formItem", "detailDecl", "detailItem", "metricGridDecl", 
                   "metricGridItem", "kanbanDecl", "kanbanItem", "calendarDecl", 
                   "calendarItem", "viewBlock", "viewItem", "editBlock", 
                   "editItem", "actionsDecl", "actionItem", "successAction", 
                   "authExprList", "authExpr" ];

function HospitalViewsParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

HospitalViewsParser.prototype = Object.create(antlr4.Parser.prototype);
HospitalViewsParser.prototype.constructor = HospitalViewsParser;

Object.defineProperty(HospitalViewsParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

HospitalViewsParser.EOF = antlr4.Token.EOF;
HospitalViewsParser.T__0 = 1;
HospitalViewsParser.T__1 = 2;
HospitalViewsParser.T__2 = 3;
HospitalViewsParser.T__3 = 4;
HospitalViewsParser.T__4 = 5;
HospitalViewsParser.T__5 = 6;
HospitalViewsParser.T__6 = 7;
HospitalViewsParser.T__7 = 8;
HospitalViewsParser.T__8 = 9;
HospitalViewsParser.T__9 = 10;
HospitalViewsParser.T__10 = 11;
HospitalViewsParser.T__11 = 12;
HospitalViewsParser.T__12 = 13;
HospitalViewsParser.T__13 = 14;
HospitalViewsParser.T__14 = 15;
HospitalViewsParser.T__15 = 16;
HospitalViewsParser.T__16 = 17;
HospitalViewsParser.T__17 = 18;
HospitalViewsParser.T__18 = 19;
HospitalViewsParser.T__19 = 20;
HospitalViewsParser.T__20 = 21;
HospitalViewsParser.T__21 = 22;
HospitalViewsParser.T__22 = 23;
HospitalViewsParser.T__23 = 24;
HospitalViewsParser.T__24 = 25;
HospitalViewsParser.T__25 = 26;
HospitalViewsParser.T__26 = 27;
HospitalViewsParser.T__27 = 28;
HospitalViewsParser.T__28 = 29;
HospitalViewsParser.T__29 = 30;
HospitalViewsParser.T__30 = 31;
HospitalViewsParser.T__31 = 32;
HospitalViewsParser.T__32 = 33;
HospitalViewsParser.T__33 = 34;
HospitalViewsParser.T__34 = 35;
HospitalViewsParser.T__35 = 36;
HospitalViewsParser.T__36 = 37;
HospitalViewsParser.T__37 = 38;
HospitalViewsParser.T__38 = 39;
HospitalViewsParser.T__39 = 40;
HospitalViewsParser.T__40 = 41;
HospitalViewsParser.BOOLEAN_LITERAL = 42;
HospitalViewsParser.ID = 43;
HospitalViewsParser.STRING = 44;
HospitalViewsParser.WS = 45;
HospitalViewsParser.COMMENT = 46;

HospitalViewsParser.RULE_viewsFile = 0;
HospitalViewsParser.RULE_importDecl = 1;
HospitalViewsParser.RULE_loginGroupsDecl = 2;
HospitalViewsParser.RULE_groupDecl = 3;
HospitalViewsParser.RULE_groupItem = 4;
HospitalViewsParser.RULE_idList = 5;
HospitalViewsParser.RULE_portalDecl = 6;
HospitalViewsParser.RULE_portalItem = 7;
HospitalViewsParser.RULE_pageDecl = 8;
HospitalViewsParser.RULE_pageItem = 9;
HospitalViewsParser.RULE_containerDecl = 10;
HospitalViewsParser.RULE_tableDecl = 11;
HospitalViewsParser.RULE_tableItem = 12;
HospitalViewsParser.RULE_formDecl = 13;
HospitalViewsParser.RULE_formItem = 14;
HospitalViewsParser.RULE_detailDecl = 15;
HospitalViewsParser.RULE_detailItem = 16;
HospitalViewsParser.RULE_metricGridDecl = 17;
HospitalViewsParser.RULE_metricGridItem = 18;
HospitalViewsParser.RULE_kanbanDecl = 19;
HospitalViewsParser.RULE_kanbanItem = 20;
HospitalViewsParser.RULE_calendarDecl = 21;
HospitalViewsParser.RULE_calendarItem = 22;
HospitalViewsParser.RULE_viewBlock = 23;
HospitalViewsParser.RULE_viewItem = 24;
HospitalViewsParser.RULE_editBlock = 25;
HospitalViewsParser.RULE_editItem = 26;
HospitalViewsParser.RULE_actionsDecl = 27;
HospitalViewsParser.RULE_actionItem = 28;
HospitalViewsParser.RULE_successAction = 29;
HospitalViewsParser.RULE_authExprList = 30;
HospitalViewsParser.RULE_authExpr = 31;

function ViewsFileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_viewsFile;
    return this;
}

ViewsFileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ViewsFileContext.prototype.constructor = ViewsFileContext;

ViewsFileContext.prototype.importDecl = function() {
    return this.getTypedRuleContext(ImportDeclContext,0);
};

ViewsFileContext.prototype.loginGroupsDecl = function() {
    return this.getTypedRuleContext(LoginGroupsDeclContext,0);
};

ViewsFileContext.prototype.EOF = function() {
    return this.getToken(HospitalViewsParser.EOF, 0);
};

ViewsFileContext.prototype.portalDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PortalDeclContext);
    } else {
        return this.getTypedRuleContext(PortalDeclContext,i);
    }
};

ViewsFileContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterViewsFile(this);
	}
};

ViewsFileContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitViewsFile(this);
	}
};




HospitalViewsParser.ViewsFileContext = ViewsFileContext;

HospitalViewsParser.prototype.viewsFile = function() {

    var localctx = new ViewsFileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, HospitalViewsParser.RULE_viewsFile);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 64;
        this.importDecl();
        this.state = 65;
        this.loginGroupsDecl();
        this.state = 69;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===HospitalViewsParser.T__10) {
            this.state = 66;
            this.portalDecl();
            this.state = 71;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 72;
        this.match(HospitalViewsParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImportDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_importDecl;
    return this;
}

ImportDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportDeclContext.prototype.constructor = ImportDeclContext;

ImportDeclContext.prototype.STRING = function() {
    return this.getToken(HospitalViewsParser.STRING, 0);
};

ImportDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterImportDecl(this);
	}
};

ImportDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitImportDecl(this);
	}
};




HospitalViewsParser.ImportDeclContext = ImportDeclContext;

HospitalViewsParser.prototype.importDecl = function() {

    var localctx = new ImportDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, HospitalViewsParser.RULE_importDecl);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        this.match(HospitalViewsParser.T__0);
        this.state = 75;
        this.match(HospitalViewsParser.STRING);
        this.state = 76;
        this.match(HospitalViewsParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LoginGroupsDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_loginGroupsDecl;
    return this;
}

LoginGroupsDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LoginGroupsDeclContext.prototype.constructor = LoginGroupsDeclContext;

LoginGroupsDeclContext.prototype.groupDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GroupDeclContext);
    } else {
        return this.getTypedRuleContext(GroupDeclContext,i);
    }
};

LoginGroupsDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterLoginGroupsDecl(this);
	}
};

LoginGroupsDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitLoginGroupsDecl(this);
	}
};




HospitalViewsParser.LoginGroupsDeclContext = LoginGroupsDeclContext;

HospitalViewsParser.prototype.loginGroupsDecl = function() {

    var localctx = new LoginGroupsDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, HospitalViewsParser.RULE_loginGroupsDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.match(HospitalViewsParser.T__2);
        this.state = 79;
        this.match(HospitalViewsParser.T__3);
        this.state = 83;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===HospitalViewsParser.T__5) {
            this.state = 80;
            this.groupDecl();
            this.state = 85;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 86;
        this.match(HospitalViewsParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GroupDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_groupDecl;
    return this;
}

GroupDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GroupDeclContext.prototype.constructor = GroupDeclContext;

GroupDeclContext.prototype.STRING = function() {
    return this.getToken(HospitalViewsParser.STRING, 0);
};

GroupDeclContext.prototype.groupItem = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GroupItemContext);
    } else {
        return this.getTypedRuleContext(GroupItemContext,i);
    }
};

GroupDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterGroupDecl(this);
	}
};

GroupDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitGroupDecl(this);
	}
};




HospitalViewsParser.GroupDeclContext = GroupDeclContext;

HospitalViewsParser.prototype.groupDecl = function() {

    var localctx = new GroupDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, HospitalViewsParser.RULE_groupDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 88;
        this.match(HospitalViewsParser.T__5);
        this.state = 89;
        this.match(HospitalViewsParser.STRING);
        this.state = 90;
        this.match(HospitalViewsParser.T__3);
        this.state = 94;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HospitalViewsParser.T__6) | (1 << HospitalViewsParser.T__7) | (1 << HospitalViewsParser.T__8))) !== 0)) {
            this.state = 91;
            this.groupItem();
            this.state = 96;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 97;
        this.match(HospitalViewsParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GroupItemContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_groupItem;
    return this;
}

GroupItemContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GroupItemContext.prototype.constructor = GroupItemContext;

GroupItemContext.prototype.idList = function() {
    return this.getTypedRuleContext(IdListContext,0);
};

GroupItemContext.prototype.BOOLEAN_LITERAL = function() {
    return this.getToken(HospitalViewsParser.BOOLEAN_LITERAL, 0);
};

GroupItemContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterGroupItem(this);
	}
};

GroupItemContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitGroupItem(this);
	}
};




HospitalViewsParser.GroupItemContext = GroupItemContext;

HospitalViewsParser.prototype.groupItem = function() {

    var localctx = new GroupItemContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, HospitalViewsParser.RULE_groupItem);
    try {
        this.state = 110;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case HospitalViewsParser.T__6:
            this.enterOuterAlt(localctx, 1);
            this.state = 99;
            this.match(HospitalViewsParser.T__6);
            this.state = 100;
            this.idList();
            this.state = 101;
            this.match(HospitalViewsParser.T__1);
            break;
        case HospitalViewsParser.T__7:
            this.enterOuterAlt(localctx, 2);
            this.state = 103;
            this.match(HospitalViewsParser.T__7);
            this.state = 104;
            this.match(HospitalViewsParser.BOOLEAN_LITERAL);
            this.state = 105;
            this.match(HospitalViewsParser.T__1);
            break;
        case HospitalViewsParser.T__8:
            this.enterOuterAlt(localctx, 3);
            this.state = 106;
            this.match(HospitalViewsParser.T__8);
            this.state = 107;
            this.idList();
            this.state = 108;
            this.match(HospitalViewsParser.T__1);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IdListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_idList;
    return this;
}

IdListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdListContext.prototype.constructor = IdListContext;

IdListContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(HospitalViewsParser.ID);
    } else {
        return this.getToken(HospitalViewsParser.ID, i);
    }
};


IdListContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterIdList(this);
	}
};

IdListContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitIdList(this);
	}
};




HospitalViewsParser.IdListContext = IdListContext;

HospitalViewsParser.prototype.idList = function() {

    var localctx = new IdListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, HospitalViewsParser.RULE_idList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.match(HospitalViewsParser.ID);
        this.state = 117;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===HospitalViewsParser.T__9) {
            this.state = 113;
            this.match(HospitalViewsParser.T__9);
            this.state = 114;
            this.match(HospitalViewsParser.ID);
            this.state = 119;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PortalDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_portalDecl;
    return this;
}

PortalDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PortalDeclContext.prototype.constructor = PortalDeclContext;

PortalDeclContext.prototype.ID = function() {
    return this.getToken(HospitalViewsParser.ID, 0);
};

PortalDeclContext.prototype.portalItem = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PortalItemContext);
    } else {
        return this.getTypedRuleContext(PortalItemContext,i);
    }
};

PortalDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterPortalDecl(this);
	}
};

PortalDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitPortalDecl(this);
	}
};




HospitalViewsParser.PortalDeclContext = PortalDeclContext;

HospitalViewsParser.prototype.portalDecl = function() {

    var localctx = new PortalDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, HospitalViewsParser.RULE_portalDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(HospitalViewsParser.T__10);
        this.state = 121;
        this.match(HospitalViewsParser.ID);
        this.state = 122;
        this.match(HospitalViewsParser.T__3);
        this.state = 126;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===HospitalViewsParser.T__11 || _la===HospitalViewsParser.T__12) {
            this.state = 123;
            this.portalItem();
            this.state = 128;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 129;
        this.match(HospitalViewsParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PortalItemContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_portalItem;
    return this;
}

PortalItemContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PortalItemContext.prototype.constructor = PortalItemContext;

PortalItemContext.prototype.idList = function() {
    return this.getTypedRuleContext(IdListContext,0);
};

PortalItemContext.prototype.pageDecl = function() {
    return this.getTypedRuleContext(PageDeclContext,0);
};

PortalItemContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterPortalItem(this);
	}
};

PortalItemContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitPortalItem(this);
	}
};




HospitalViewsParser.PortalItemContext = PortalItemContext;

HospitalViewsParser.prototype.portalItem = function() {

    var localctx = new PortalItemContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, HospitalViewsParser.RULE_portalItem);
    try {
        this.state = 136;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case HospitalViewsParser.T__11:
            this.enterOuterAlt(localctx, 1);
            this.state = 131;
            this.match(HospitalViewsParser.T__11);
            this.state = 132;
            this.idList();
            this.state = 133;
            this.match(HospitalViewsParser.T__1);
            break;
        case HospitalViewsParser.T__12:
            this.enterOuterAlt(localctx, 2);
            this.state = 135;
            this.pageDecl();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PageDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_pageDecl;
    return this;
}

PageDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PageDeclContext.prototype.constructor = PageDeclContext;

PageDeclContext.prototype.ID = function() {
    return this.getToken(HospitalViewsParser.ID, 0);
};

PageDeclContext.prototype.pageItem = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PageItemContext);
    } else {
        return this.getTypedRuleContext(PageItemContext,i);
    }
};

PageDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterPageDecl(this);
	}
};

PageDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitPageDecl(this);
	}
};




HospitalViewsParser.PageDeclContext = PageDeclContext;

HospitalViewsParser.prototype.pageDecl = function() {

    var localctx = new PageDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, HospitalViewsParser.RULE_pageDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 138;
        this.match(HospitalViewsParser.T__12);
        this.state = 139;
        this.match(HospitalViewsParser.ID);
        this.state = 140;
        this.match(HospitalViewsParser.T__3);
        this.state = 144;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HospitalViewsParser.T__13) | (1 << HospitalViewsParser.T__14) | (1 << HospitalViewsParser.T__15) | (1 << HospitalViewsParser.T__18) | (1 << HospitalViewsParser.T__23) | (1 << HospitalViewsParser.T__24) | (1 << HospitalViewsParser.T__26) | (1 << HospitalViewsParser.T__30))) !== 0)) {
            this.state = 141;
            this.pageItem();
            this.state = 146;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 147;
        this.match(HospitalViewsParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PageItemContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HospitalViewsParser.RULE_pageItem;
    return this;
}

PageItemContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PageItemContext.prototype.constructor = PageItemContext;

PageItemContext.prototype.STRING = function() {
    return this.getToken(HospitalViewsParser.STRING, 0);
};

PageItemContext.prototype.containerDecl = function() {
    return this.getTypedRuleContext(ContainerDeclContext,0);
};

PageItemContext.prototype.enterRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.enterPageItem(this);
	}
};

PageItemContext.prototype.exitRule = function(listener) {
    if(listener instanceof HospitalViewsListener ) {
        listener.exitPageItem(this);
	}
};




HospitalViewsParser.PageItemContext = PageItemContext;

HospitalViewsParser.prototype.pageItem = function() {
